# git-and-github-cicd-workshop

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
docs/content/: getting_started.md  index.md
docs/content/workshop_presentation/: github_actions_intro.md  index.md  open_up_the_repository.md  opinions_and_disclaimers.md  pre_commits.md  who_am_i.md  workshop_context.md
docs/content/workshops/: github_actions.md  index.md  pre-commit-hooks.md
getting_started/: index.html
notebooks/: analysis.ipynb
practice_level_gp_appointments/: analytics.py  config.py
search/: search_index.json
tests/unittests/: conftest.py  test_analytics.py  test_config.py  test_data_processing.py  test_main.py  test_output.py  test_pipeline.py
workshop_presentation/github_actions_intro/: index.html
workshop_presentation/open_up_the_repository/: index.html
workshop_presentation/opinions_and_disclaimers/: index.html
workshop_presentation/pre_commits/: index.html
workshop_presentation/who_am_i/: index.html
workshop_presentation/workshop_context/: index.html
workshops/: index.html
workshops/github_actions/: index.html
workshops/pre-commit-hooks/: index.html
