[project]
name = "git-and-github-cicd-workshop"
version = "0.1.0"
description = "NHS Data Science Workshop - Git and GitHub CI/CD"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "loguru>=0.7.0",
    "oops-its-a-pipeline @ git+https://github.com/nhsengland/oops-its-a-pipeline.git",
    "nhs-herbot @ git+https://github.com/nhsengland/nhs_herbot.git",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "nbstripout>=0.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.25.0",
    "mkdocstrings-python>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["practice_level_gp_appointments"]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests/unittests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PIE", "SIM"]
ignore = []
fixable = ["ALL"]
unfixable = []
